--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: rgb(10, 25, 48);
-  padding: 2rem;
+  padding: 1rem 3rem;
 }
 .navigation .nav-left li {
   list-style: none;
@@ -36,11 +36,13 @@
 .navigation .nav-right li a {
   text-decoration: none;
   color: rgb(136, 146, 175);
+  font-family: "Cal Sans", sans-serif;
 }
 .navigation .nav-right li a .nav-numbers {
   color: rgb(77, 207, 194);
-  margin: 0.5rem;
+  margin: 0.2rem;
   font-family: "Electrolize", sans-serif;
+  font-size: 12px;
 }
 
 #resume-button {
