--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
@@ -43,10 +44,16 @@
   font-family: "Cal Sans", sans-serif;
 }
 .navigation .nav-right li a .nav-numbers {
+  display: inline-block;
   color: rgb(77, 207, 194);
   margin: 0.2rem;
   font-family: "Electrolize", sans-serif;
   font-size: 12px;
+  transition: transform 0.2s ease;
+}
+
+.nav-right a:hover .nav-numbers {
+  transform: translateX(-5px);
 }
 
 #resume-button {
@@ -55,6 +62,26 @@
   border-radius: 5px;
   background-color: rgb(10, 25, 48);
   padding: 0.5rem 1rem;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+#resume-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: -1;
+  transition: 0.4s ease;
+}
+#resume-button:hover::before {
+  left: 0;
+}
+#resume-button:hover {
+  color: rgb(10, 25, 48);
 }
 
 body {
@@ -67,7 +94,7 @@ body {
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 0 3rem;
 }
 .hero-container #intro {
@@ -77,24 +104,139 @@ body {
 .hero-container #name {
   color: rgb(204, 214, 246);
   font-size: 5rem;
+  font-family: "Fugaz One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .hero-container #sub-title {
   color: rgb(136, 146, 175);
   font-size: 3rem;
+  font-family: "Fugaz One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .hero-container #hero-information {
   color: rgb(136, 146, 175);
+  font-family: "Electrolize", sans-serif;
+  font-size: 18px;
   width: 100%;
   max-width: 50%;
 }
-.hero-container button {
-  width: 10rem;
+.hero-container #project-button {
+  width: 15rem;
   height: 2rem;
   color: rgb(77, 207, 194);
   border: 1px solid rgb(77, 207, 194);
   border-radius: 5px;
   background-color: rgb(10, 25, 48);
   margin-top: 2rem;
+}
+
+.about-me {
+  height: 50vh;
+  padding-left: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.about-me .about-me-title {
+  font-family: "Cal Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(204, 214, 246);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.about-me .about-me-title span {
+  color: rgb(77, 207, 194);
+  margin: 0.2rem;
+  font-family: "Electrolize", sans-serif;
+  font-size: 12px;
+  transition: transform 0.2s ease;
+}
+.about-me .about-me-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+.about-me .about-me-container .about-me-text {
+  flex: 2;
+  color: rgb(136, 146, 175);
+  font-family: "Electrolize", sans-serif;
+  font-size: 18px;
+  line-height: 1.4;
+}
+.about-me .about-me-container .about-me-text p {
+  margin-bottom: 1.5rem;
+}
+.about-me .about-me-container .about-me-text .container-tech-list {
+  display: flex;
+  gap: 30%;
+  margin-top: 3rem;
+}
+.about-me .about-me-container .about-me-text .container-tech-list ul {
+  list-style: none;
+}
+.about-me .about-me-container .about-me-text .container-tech-list li::before {
+  content: "▶";
+  color: rgb(77, 207, 194);
+  font-size: 10px;
+  margin-right: 0.5rem;
+  align-items: center;
+}
+.about-me .placeholder-img img {
+  height: 20rem;
+  width: auto;
+  padding-right: 4rem;
+}
+
+.container-project-title {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-left: 3rem;
+  margin-top: 10rem;
+}
+.container-project-title .project-title {
+  font-family: "Cal Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(204, 214, 246);
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.container-project-title .project-title span {
+  color: rgb(77, 207, 194);
+  margin: 0.2rem;
+  font-family: "Electrolize", sans-serif;
+  font-size: 12px;
+  transition: transform 0.2s ease;
+}
+
+.project-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.project-container .project-image {
+  flex: 2;
+  display: flex;
+  padding-left: 3rem;
+}
+.project-container .project-image img {
+  width: 100%;
+  height: auto;
+}
+.project-container .project-information {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=styles.css.map */
