--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,11 @@
 $primary-color: rgb(204, 214, 246);
 $secondary-color: rgb(136, 146, 175);
-$extra-color: rgb(77, 207, 194);
+$extra-color: rgb(83, 229, 214);
 $background-color: rgb(10, 25, 48);
 $box-color: rgb(17, 34, 64);
 $main-font: "Cal Sans";
 $secondary-font: "Electrolize", sans-serif;
+$jetbrain-font: "JetBrains Mono", Consolas, "Courier New", monospace;
 
 @mixin fontStyle {
   font-family: "Fugaz One", sans-serif;
@@ -17,6 +18,8 @@ $secondary-font: "Electrolize", sans-serif;
   border: 1px solid $extra-color;
   border-radius: 5px;
   background-color: $background-color;
+  font-family: $main-font;
+  cursor: pointer !important;
 }
 
 @mixin flex {
@@ -36,8 +39,8 @@ $secondary-font: "Electrolize", sans-serif;
 @mixin number-font {
   color: $extra-color;
   margin: 0.2rem;
-  font-family: $secondary-font;
-  font-size: 12px;
+  font-family: $jetbrain-font;
+  font-size: 16px;
   transition: transform 0.2s ease;
 }
 
@@ -109,7 +112,7 @@ main {
           display: inline-block;
           color: $extra-color;
           margin: 0.2rem;
-          font-family: $secondary-font;
+          font-family: $jetbrain-font;
           font-size: 12px;
           transition: transform 0.2s ease;
         }
@@ -164,7 +167,7 @@ body {
 
   #intro {
     color: $extra-color;
-    font-size: 1rem;
+    font-family: $jetbrain-font;
   }
 
   #name {
@@ -274,18 +277,25 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+  margin-top: 6rem;
 
   .project-image {
     background-color: rgb(46, 64, 94);
-    padding: 1rem;
+    padding: 0.5rem;
     height: 100%;
+    border-radius: 5px;
     max-height: 30rem;
     flex: 2;
     display: flex;
 
+    video {
+      border-radius: 5px;
+    }
+
     img {
       width: 100%;
       height: auto;
+      border-radius: 5px;
     }
   }
 
@@ -329,6 +339,73 @@ body {
       width: 2rem;
       height: auto;
       margin-top: 1rem;
+    }
+
+    .link-images {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+    }
+  }
+}
+
+.project-container.reverse {
+  flex-direction: row-reverse;
+  margin-top: 6rem;
+}
+
+.contact-section {
+  height: 100vh;
+  text-align: center;
+  @include flex;
+
+  .contact-container {
+    @include flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+    h4 {
+      font-family: $jetbrain-font;
+      color: $extra-color;
+    }
+
+    h2 {
+      @include title-font;
+      font-size: 3rem;
+    }
+
+    p {
+      @include p-font();
+      width: 45%;
+    }
+
+    a {
+      @include button-style;
+      padding: 0.5rem 2rem;
+      text-decoration: none;
+      z-index: 1;
+      position: relative;
+      overflow: hidden;
+
+      &::before {
+        content: "";
+        background-color: white;
+        z-index: -1;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: -100%;
+        transition: 0.4s ease;
+      }
+
+      &:hover::before {
+        left: 0;
+      }
+      &:hover {
+        color: $background-color;
+      }
     }
   }
 }
