--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ body {
 }
 .about-me .about-me-container .about-me-text p {
   margin-bottom: 1.5rem;
+  margin-right: 8rem;
 }
 .about-me .about-me-container .about-me-text .container-tech-list {
   display: flex;
@@ -199,6 +200,7 @@ body {
 }
 .about-me .placeholder-img img {
   height: 20rem;
+  border-radius: 10px;
   width: auto;
 }
 
@@ -417,6 +419,9 @@ body {
   .about-me .about-me-container .about-me-text {
     flex: 1;
   }
+  .about-me .about-me-container .about-me-text p {
+    margin-right: 0rem;
+  }
 }
 @media screen and (max-width: 992px) {
   .navigation {
@@ -460,6 +465,9 @@ body {
   .contact-section {
     margin-top: 8rem;
   }
+  .about-me .about-me-container .about-me-text p {
+    margin-right: 0rem;
+  }
   .about-me .about-me-container .about-me-text .container-tech-list {
     margin-bottom: 4rem;
   }
@@ -498,6 +506,9 @@ body {
   }
   .about-me .about-me-container {
     flex-direction: column;
+  }
+  .about-me .about-me-container .about-me-text p {
+    margin-right: 0rem;
   }
   .about-me .about-me-container .about-me-text .container-tech-list {
     margin-bottom: 4rem;
@@ -573,13 +584,16 @@ body {
     text-align: center;
   }
   .contact-section {
-    margin-top: 8rem;
+    margin-top: 3rem;
   }
   .contact-section .contact-container h2 {
     font-size: 2rem;
   }
   .contact-section .contact-container p {
     width: 100%;
+  }
+  .about-me .about-me-container p {
+    margin-right: 0rem;
   }
   .about-me .about-me-container .about-me-text .container-tech-list {
     margin-bottom: 4rem;
@@ -590,7 +604,7 @@ body {
     width: 100%;
   }
   .about-me .about-me-container .placeholder-img img {
-    height: 12rem;
+    height: 14rem;
     width: auto;
   }
 }
