--- a/styles.scss
+++ b/styles.scss
@@ -195,6 +195,11 @@ body {
     padding: 0.75rem 2rem;
     @include button-style;
     margin-top: 2rem;
+    transition: 0.2s ease;
+  }
+
+  #project-button:hover {
+    transform: translateY(-5px);
   }
 }
 
@@ -351,6 +356,11 @@ body {
       align-items: center;
       gap: 1rem;
     }
+
+    a:hover {
+      transform: translateY(-5px);
+      transition: 0.4s ease;
+    }
   }
 }
 
@@ -444,6 +454,18 @@ body {
 
 .scrolled {
   box-shadow: -1px -1px 10px black;
+  transition: 0.5s ease;
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease;
+}
+
+.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 // Media Queries
